<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_marginLeft="@dimen/layoutMargin"
        android:layout_marginRight="@dimen/layoutMargin"
>

    <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/titleTextMargin"
            android:layout_marginBottom="@dimen/titleTextMargin"
            android:textSize="@dimen/titleTextSize"
            android:textColor="@color/textColor"
            android:text="@string/name"
    />

    <android.support.v7.widget.CardView
            android:id="@+id/aboutCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardHeight"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/cardMargin"
            android:layout_marginBottom="@dimen/cardMargin">
        <android.support.constraint.ConstraintLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            
            <ImageView
                    android:id="@+id/aboutImage"
                    android:layout_width="@dimen/imageWidth"
                    android:layout_height="@dimen/imageHeight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/about"
                    android:layout_marginTop="@dimen/imageMargin"
                    android:layout_marginLeft="@dimen/imageMargin"
            />
            <TextView
                    android:id="@+id/aboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/aboutImage"
                    android:layout_marginTop="@dimen/aboutTitleMargin"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTitleTextSize"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:text="@string/aboutTitleText"
            />
            <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/aboutTitle"
                    app:layout_constraintLeft_toRightOf="@id/aboutImage"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTextTextSize"
                    android:textStyle="bold"
                    android:text="@string/aboutTextText"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/experienceCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardHeight"
            app:layout_constraintTop_toBottomOf="@id/aboutCard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/cardMargin"
            android:layout_marginBottom="@dimen/cardMargin">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/experienceImage"
                    android:layout_width="@dimen/imageWidth"
                    android:layout_height="@dimen/imageHeight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/experience"
                    android:layout_marginTop="@dimen/imageMargin"
                    android:layout_marginLeft="@dimen/imageMargin"
            />
            <TextView
                    android:id="@+id/experienceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/experienceImage"
                    android:layout_marginTop="@dimen/aboutTitleMargin"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTitleTextSize"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:text="@string/experienceTitleText"
            />
            <TextView
                    android:id="@+id/experienceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/experienceTitle"
                    app:layout_constraintLeft_toRightOf="@id/experienceImage"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTextTextSize"
                    android:textStyle="bold"
                    android:text="@string/experienceTextText"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/contactCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardHeight"
            app:layout_constraintTop_toBottomOf="@id/experienceCard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/cardMargin"
            android:layout_marginBottom="@dimen/cardMargin">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/contactImage"
                    android:layout_width="@dimen/imageWidth"
                    android:layout_height="@dimen/imageHeight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/contact"
                    android:layout_marginTop="@dimen/imageMargin"
                    android:layout_marginLeft="@dimen/imageMargin"
            />
            <TextView
                    android:id="@+id/contactTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/contactImage"
                    android:layout_marginTop="@dimen/aboutTitleMargin"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTitleTextSize"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:text="@string/contactTitleText"
            />
            <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/contactTitle"
                    app:layout_constraintLeft_toRightOf="@id/contactImage"
                    android:layout_marginLeft="@dimen/aboutTitleMargin"
                    android:textSize="@dimen/aboutTextTextSize"
                    android:textStyle="bold"
                    android:text="@string/contactTextText"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    


</android.support.constraint.ConstraintLayout>